--- a/dodge.html
+++ b/dodge.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tesla Cars</title>
+    <title>Dodge Cars</title>
     <link rel="stylesheet" href="root/css/styles.css">
     <style>
         body {
@@ -64,8 +64,7 @@
             text-align: center;
             font-weight: bold;
             color: #f0f0f0;
-            margin-bottom: 0.75rem;
-            padding: 0.5rem 0.25rem;
+            margin-bottom: 0.5rem;
         }
         .back-button {
             display: inline-block;
@@ -86,51 +85,69 @@
 </head>
 <body>
     <header>
-        <h1>Tesla Cars</h1>
+        <h1>Dodge Cars</h1>
     </header>
     <main>
         <a class="back-button" onclick="history.back()">← Back</a>
         <div id="cars">
-            <a href="tesla-model-s.html" class="car-tile">
+            <a href="dodge-charger.html" class="car-tile">
                 <button>
-                    <img src="root/images/model-s.png" alt="Tesla Model S">
-                    <span>Tesla Model S</span>
+                    <img src="root/images/charger.png" alt="Dodge Charger">
+                    <span>Dodge Charger</span>
                 </button>
             </a>
-            <a href="tesla-model-3.html" class="car-tile">
+            <a href="dodge-challenger.html" class="car-tile">
                 <button>
-                    <img src="root/images/model-3.png" alt="Tesla Model 3">
-                    <span>Tesla Model 3</span>
+                    <img src="root/images/challenger.png" alt="Dodge Challenger">
+                    <span>Dodge Challenger</span>
                 </button>
             </a>
-            <a href="tesla-model-x.html" class="car-tile">
+            <a href="dodge-durango.html" class="car-tile">
                 <button>
-                    <img src="root/images/model-x.png" alt="Tesla Model X">
-                    <span>Tesla Model X</span>
+                    <img src="root/images/durango.png" alt="Dodge Durango">
+                    <span>Dodge Durango</span>
                 </button>
             </a>
-            <a href="tesla-model-y.html" class="car-tile">
+            <a href="dodge-journey.html" class="car-tile">
                 <button>
-                    <img src="root/images/model-y.png" alt="Tesla Model Y">
-                    <span>Tesla Model Y</span>
+                    <img src="root/images/journey.png" alt="Dodge Journey">
+                    <span>Dodge Journey</span>
                 </button>
             </a>
-            <a href="tesla-cybertruck.html" class="car-tile">
+            <a href="dodge-grandcaravan.html" class="car-tile">
                 <button>
-                    <img src="root/images/cybertruck.png" alt="Tesla Cybertruck">
-                    <span>Tesla Cybertruck</span>
+                    <img src="root/images/grandcaravan.png" alt="Dodge Grand Caravan">
+                    <span>Dodge Grand Caravan</span>
                 </button>
             </a>
-            <a href="tesla-roadster.html" class="car-tile">
+            <a href="dodge-ram.html" class="car-tile">
                 <button>
-                    <img src="root/images/roadster.png" alt="Tesla Roadster">
-                    <span>Tesla Roadster</span>
+                    <img src="root/images/ram.png" alt="Dodge Ram">
+                    <span>Dodge Ram</span>
                 </button>
             </a>
-            <a href="tesla-semi.html" class="car-tile">
+            <a href="dodge-viper.html" class="car-tile">
                 <button>
-                    <img src="root/images/semi.png" alt="Tesla Semi">
-                    <span>Tesla Semi</span>
+                    <img src="root/images/viper.png" alt="Dodge Viper">
+                    <span>Dodge Viper</span>
+                </button>
+            </a>
+            <a href="dodge-dart.html" class="car-tile">
+                <button>
+                    <img src="root/images/dart.png" alt="Dodge Dart">
+                    <span>Dodge Dart</span>
+                </button>
+            </a>
+            <a href="dodge-nitro.html" class="car-tile">
+                <button>
+                    <img src="root/images/nitro.png" alt="Dodge Nitro">
+                    <span>Dodge Nitro</span>
+                </button>
+            </a>
+            <a href="dodge-caliber.html" class="car-tile">
+                <button>
+                    <img src="root/images/caliber.png" alt="Dodge Caliber">
+                    <span>Dodge Caliber</span>
                 </button>
             </a>
         </div>
