--- a/bmw.html
+++ b/bmw.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tesla Cars</title>
+    <title>BMW Cars</title>
     <link rel="stylesheet" href="root/css/styles.css">
     <style>
         body {
@@ -64,8 +64,7 @@
             text-align: center;
             font-weight: bold;
             color: #f0f0f0;
-            margin-bottom: 0.75rem;
-            padding: 0.5rem 0.25rem;
+            margin-bottom: 0.5rem;
         }
         .back-button {
             display: inline-block;
@@ -86,51 +85,69 @@
 </head>
 <body>
     <header>
-        <h1>Tesla Cars</h1>
+        <h1>BMW Cars</h1>
     </header>
     <main>
         <a class="back-button" onclick="history.back()">← Back</a>
         <div id="cars">
-            <a href="tesla-model-s.html" class="car-tile">
+            <a href="bmw-x5.html" class="car-tile">
                 <button>
-                    <img src="root/images/model-s.png" alt="Tesla Model S">
-                    <span>Tesla Model S</span>
+                    <img src="root/images/bmw-x5.png" alt="BMW X5">
+                    <span>BMW X5</span>
                 </button>
             </a>
-            <a href="tesla-model-3.html" class="car-tile">
+            <a href="bmw-3series.html" class="car-tile">
                 <button>
-                    <img src="root/images/model-3.png" alt="Tesla Model 3">
-                    <span>Tesla Model 3</span>
+                    <img src="root/images/bmw-3series.png" alt="BMW 3 Series">
+                    <span>BMW 3 Series</span>
                 </button>
             </a>
-            <a href="tesla-model-x.html" class="car-tile">
+            <a href="bmw-5series.html" class="car-tile">
                 <button>
-                    <img src="root/images/model-x.png" alt="Tesla Model X">
-                    <span>Tesla Model X</span>
+                    <img src="root/images/bmw-5series.png" alt="BMW 5 Series">
+                    <span>BMW 5 Series</span>
                 </button>
             </a>
-            <a href="tesla-model-y.html" class="car-tile">
+            <a href="bmw-7series.html" class="car-tile">
                 <button>
-                    <img src="root/images/model-y.png" alt="Tesla Model Y">
-                    <span>Tesla Model Y</span>
+                    <img src="root/images/bmw-7series.png" alt="BMW 7 Series">
+                    <span>BMW 7 Series</span>
                 </button>
             </a>
-            <a href="tesla-cybertruck.html" class="car-tile">
+            <a href="bmw-x3.html" class="car-tile">
                 <button>
-                    <img src="root/images/cybertruck.png" alt="Tesla Cybertruck">
-                    <span>Tesla Cybertruck</span>
+                    <img src="root/images/bmw-x3.png" alt="BMW X3">
+                    <span>BMW X3</span>
                 </button>
             </a>
-            <a href="tesla-roadster.html" class="car-tile">
+            <a href="bmw-x7.html" class="car-tile">
                 <button>
-                    <img src="root/images/roadster.png" alt="Tesla Roadster">
-                    <span>Tesla Roadster</span>
+                    <img src="root/images/bmw-x7.png" alt="BMW X7">
+                    <span>BMW X7</span>
                 </button>
             </a>
-            <a href="tesla-semi.html" class="car-tile">
+            <a href="bmw-i4.html" class="car-tile">
                 <button>
-                    <img src="root/images/semi.png" alt="Tesla Semi">
-                    <span>Tesla Semi</span>
+                    <img src="root/images/bmw-i4.png" alt="BMW i4">
+                    <span>BMW i4</span>
+                </button>
+            </a>
+            <a href="bmw-i7.html" class="car-tile">
+                <button>
+                    <img src="root/images/bmw-i7.png" alt="BMW i7">
+                    <span>BMW i7</span>
+                </button>
+            </a>
+            <a href="bmw-m3.html" class="car-tile">
+                <button>
+                    <img src="root/images/bmw-m3.png" alt="BMW M3">
+                    <span>BMW M3</span>
+                </button>
+            </a>
+            <a href="bmw-m5.html" class="car-tile">
+                <button>
+                    <img src="root/images/bmw-m5.png" alt="BMW M5">
+                    <span>BMW M5</span>
                 </button>
             </a>
         </div>
