--- a/dodge.html
+++ b/dodge.html
@@ -85,6 +85,7 @@
 </head>
 <body>
     <header>
+        <img src="root/images/dodge-logo.png" alt="Dodge Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Dodge Cars</h1>
     </header>
     <main>
