--- a/chrysler.html
+++ b/chrysler.html
@@ -85,6 +85,7 @@
 </head>
 <body>
     <header>
+        <img src="root/images/chrysler-logo.png" alt="Chrysler Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Chrysler Cars</h1>
     </header>
     <main>
