--- a/tesla.html
+++ b/tesla.html
@@ -86,6 +86,7 @@
 </head>
 <body>
     <header>
+        <img src="root/images/tesla-logo.png" alt="Tesla Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Tesla Cars</h1>
     </header>
     <main>
