--- a/tesla.html
+++ b/tesla.html
@@ -92,48 +92,7 @@
     <main>
         <a class="back-button" onclick="history.back()">← Back</a>
         <div id="cars">
-            <a href="tesla-model-s.html" class="car-tile">
-                <button>
-                    <img src="root/images/model-s.png" alt="Tesla Model S">
-                    <span>Tesla Model S</span>
-                </button>
-            </a>
-            <a href="tesla-model-3.html" class="car-tile">
-                <button>
-                    <img src="root/images/model-3.png" alt="Tesla Model 3">
-                    <span>Tesla Model 3</span>
-                </button>
-            </a>
-            <a href="tesla-model-x.html" class="car-tile">
-                <button>
-                    <img src="root/images/model-x.png" alt="Tesla Model X">
-                    <span>Tesla Model X</span>
-                </button>
-            </a>
-            <a href="tesla-model-y.html" class="car-tile">
-                <button>
-                    <img src="root/images/model-y.png" alt="Tesla Model Y">
-                    <span>Tesla Model Y</span>
-                </button>
-            </a>
-            <a href="tesla-cybertruck.html" class="car-tile">
-                <button>
-                    <img src="root/images/cybertruck.png" alt="Tesla Cybertruck">
-                    <span>Tesla Cybertruck</span>
-                </button>
-            </a>
-            <a href="tesla-roadster.html" class="car-tile">
-                <button>
-                    <img src="root/images/roadster.png" alt="Tesla Roadster">
-                    <span>Tesla Roadster</span>
-                </button>
-            </a>
-            <a href="tesla-semi.html" class="car-tile">
-                <button>
-                    <img src="root/images/semi.png" alt="Tesla Semi">
-                    <span>Tesla Semi</span>
-                </button>
-            </a>
+            <!-- ...existing car tiles... -->
         </div>
     </main>
     <footer>
