--- a/honda.html
+++ b/honda.html
@@ -86,6 +86,7 @@
 </head>
 <body>
     <header>
+        <img src="root/images/honda-logo.png" alt="Honda Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Honda Top 20 Selling Cars</h1>
     </header>
     <main>
