--- a/ford.html
+++ b/ford.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="root/images/ford-logo.png" alt="Ford Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Ford Cars</h1>
     </header>
     <main>
