--- a/mopar.html
+++ b/mopar.html
@@ -93,13 +93,13 @@
         <div id="brands">
             <a href="dodge.html" class="brand-tile">
                 <button>
-                    <img src="root/images/dodge.png" alt="Dodge">
+                    <img src="root/images/dodge-logo.png" alt="Dodge">
                     <span>Dodge</span>
                 </button>
             </a>
             <a href="chrysler.html" class="brand-tile">
                 <button>
-                    <img src="root/images/chrysler.png" alt="Chrysler">
+                    <img src="root/images/chrysler-logo.png" alt="Chrysler">
                     <span>Chrysler</span>
                 </button>
             </a>
