--- a/toyota.html
+++ b/toyota.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=devic-width, initial-scale=1.0">
     <title>Toyota Cars</title>
     <link rel="stylesheet" href="root/css/styles.css">
 </head>
 <body>
     <header>
+        <img src="root/images/toyota-logo.png" alt="Toyota Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Toyota Cars</h1>
     </header>
     <main>
