--- a/bmw.html
+++ b/bmw.html
@@ -85,6 +85,7 @@
 </head>
 <body>
     <header>
+        <img src="root/images/bmw-logo.png" alt="BMW Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>BMW Cars</h1>
     </header>
     <main>
