--- a/ford-mustang.html
+++ b/ford-mustang.html
@@ -91,6 +91,9 @@
 <body>
     <header>
         <h1>Ford Mustang</h1>
+        <a href="ford.html" class="brand-link" style="display:inline-block; margin-top:0.5rem; color:#007bff; text-decoration:underline; font-size:1rem;">
+            ← Back to Ford Brand Page
+        </a>
     </header>
     <main>
         <a class="back-button" onclick="history.back()">← Back</a>
