--- a/ferrari.html
+++ b/ferrari.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plymouth Cars</title>
+    <title>Ferrari Cars</title>
     <link rel="stylesheet" href="root/css/styles.css">
     <style>
         body {
@@ -20,17 +20,6 @@
         }
         h1 {
             color: #ffffff;
-        }
-        .notice {
-            color: #ffcc00;
-            background: #333;
-            border-radius: 6px;
-            padding: 1rem;
-            margin: 1.5rem auto 2rem auto;
-            max-width: 600px;
-            text-align: center;
-            font-size: 1.1rem;
-            font-weight: bold;
         }
         #cars {
             display: flex;
@@ -96,73 +85,70 @@
 </head>
 <body>
     <header>
-        <img src="root/images/plymouth-logo.png" alt="Plymouth Logo" style="height:60px; margin-bottom:0.5rem;">
-        <h1>Plymouth Cars</h1>
+        <img src="root/images/ferrari-logo.png" alt="Ferrari Logo" style="height:60px; margin-bottom:0.5rem;">
+        <h1>Ferrari Cars</h1>
     </header>
     <main>
         <a class="back-button" onclick="history.back()">← Back</a>
-        <div class="notice">
-            <strong>Note:</strong> Plymouth is a discontinued brand and no longer manufactures cars. The following are some of its most iconic models.
-        </div>
         <div id="cars">
-            <a href="plymouth-barracuda.html" class="car-tile">
+            <a href="ferrari-488.html" class="car-tile">
                 <button>
-                    <img src="root/images/barracuda.png" alt="Plymouth Barracuda">
-                    <span>Plymouth Barracuda</span>
+                    <img src="root/images/488.png" alt="Ferrari 488">
+                    <span>Ferrari 488</span>
                 </button>
             </a>
-            <a href="plymouth-road-runner.html" class="car-tile">
+            <a href="ferrari-f8.html" class="car-tile">
                 <button>
-                    <img src="root/images/road-runner.png" alt="Plymouth Road Runner">
-                    <span>Plymouth Road Runner</span>
+                    <img src="root/images/f8.png" alt="Ferrari F8 Tributo">
+                    <span>Ferrari F8 Tributo</span>
                 </button>
             </a>
-            <a href="plymouth-gtx.html" class="car-tile">
+            <a href="ferrari-812.html" class="car-tile">
                 <button>
-                    <img src="root/images/gtx.png" alt="Plymouth GTX">
-                    <span>Plymouth GTX</span>
+                    <img src="root/images/812.png" alt="Ferrari 812 Superfast">
+                    <span>Ferrari 812 Superfast</span>
                 </button>
             </a>
-            <a href="plymouth-fury.html" class="car-tile">
+            <a href="ferrari-portofino.html" class="car-tile">
                 <button>
-                    <img src="root/images/fury.png" alt="Plymouth Fury">
-                    <span>Plymouth Fury</span>
+                    <img src="root/images/portofino.png" alt="Ferrari Portofino">
+                    <span>Ferrari Portofino</span>
                 </button>
             </a>
-            <a href="plymouth-duster.html" class="car-tile">
+            <a href="ferrari-sf90.html" class="car-tile">
                 <button>
-                    <img src="root/images/duster.png" alt="Plymouth Duster">
-                    <span>Plymouth Duster</span>
+                    <img src="root/images/sf90.png" alt="Ferrari SF90 Stradale">
+                    <span>Ferrari SF90 Stradale</span>
                 </button>
             </a>
-            <a href="plymouth-superbird.html" class="car-tile">
+            <a href="ferrari-gtc4lusso.html" class="car-tile">
                 <button>
-                    <img src="root/images/superbird.png" alt="Plymouth Superbird">
-                    <span>Plymouth Superbird</span>
+                    <img src="root/images/gtc4lusso.png" alt="Ferrari GTC4Lusso">
+                    <span>Ferrari GTC4Lusso</span>
                 </button>
             </a>
-            <a href="plymouth-volare.html" class="car-tile">
+            <a href="ferrari-rom.html" class="car-tile">
                 <button>
-                    <img src="root/images/volare.png" alt="Plymouth Volaré">
-                    <span>Plymouth Volaré</span>
+                    <img src="root/images/roma.png" alt="Ferrari Roma">
+                    <span>Ferrari Roma</span>
                 </button>
             </a>
-            <a href="plymouth-prowler.html" class="car-tile">
+            <a href="ferrari-laferrari.html" class="car-tile">
                 <button>
-                    <img src="root/images/prowler.png" alt="Plymouth Prowler">
-                    <span>Plymouth Prowler</span>
+                    <img src="root/images/laferrari.png" alt="Ferrari LaFerrari">
+                    <span>Ferrari LaFerrari</span>
                 </button>
             </a>
-            <a href="plymouth-satellite.html" class="car-tile">
+            <a href="ferrari-enzo.html" class="car-tile">
                 <button>
-                    <img src="root/images/satellite.png" alt="Plymouth Satellite">
-                    <span>Plymouth Satellite</span>
+                    <img src="root/images/enzo.png" alt="Ferrari Enzo">
+                    <span>Ferrari Enzo</span>
                 </button>
             </a>
-            <a href="plymouth-belvedere.html" class="car-tile">
+            <a href="ferrari-296.html" class="car-tile">
                 <button>
-                    <img src="root/images/belvedere.png" alt="Plymouth Belvedere">
-                    <span>Plymouth Belvedere</span>
+                    <img src="root/images/296.png" alt="Ferrari 296 GTB">
+                    <span>Ferrari 296 GTB</span>
                 </button>
             </a>
         </div>
