--- a/mopar.html
+++ b/mopar.html
@@ -86,6 +86,7 @@
 </head>
 <body>
     <header>
+        <img src="root/images/mopar-logo.png" alt="Mopar Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Mopar Brands</h1>
     </header>
     <main>
