--- a/bugatti.html
+++ b/bugatti.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plymouth Cars</title>
+    <title>Bugatti Cars</title>
     <link rel="stylesheet" href="root/css/styles.css">
     <style>
         body {
@@ -20,17 +20,6 @@
         }
         h1 {
             color: #ffffff;
-        }
-        .notice {
-            color: #ffcc00;
-            background: #333;
-            border-radius: 6px;
-            padding: 1rem;
-            margin: 1.5rem auto 2rem auto;
-            max-width: 600px;
-            text-align: center;
-            font-size: 1.1rem;
-            font-weight: bold;
         }
         #cars {
             display: flex;
@@ -96,73 +85,52 @@
 </head>
 <body>
     <header>
-        <img src="root/images/plymouth-logo.png" alt="Plymouth Logo" style="height:60px; margin-bottom:0.5rem;">
-        <h1>Plymouth Cars</h1>
+        <img src="root/images/bugatti-logo.png" alt="Bugatti Logo" style="height:60px; margin-bottom:0.5rem;">
+        <h1>Bugatti Cars</h1>
     </header>
     <main>
         <a class="back-button" onclick="history.back()">← Back</a>
-        <div class="notice">
-            <strong>Note:</strong> Plymouth is a discontinued brand and no longer manufactures cars. The following are some of its most iconic models.
-        </div>
         <div id="cars">
-            <a href="plymouth-barracuda.html" class="car-tile">
+            <a href="bugatti-tourbillon.html" class="car-tile">
                 <button>
-                    <img src="root/images/barracuda.png" alt="Plymouth Barracuda">
-                    <span>Plymouth Barracuda</span>
+                    <img src="root/images/tourbillon.png" alt="Bugatti Tourbillon">
+                    <span>Bugatti Tourbillon</span>
                 </button>
             </a>
-            <a href="plymouth-road-runner.html" class="car-tile">
+            <a href="bugatti-chiron.html" class="car-tile">
                 <button>
-                    <img src="root/images/road-runner.png" alt="Plymouth Road Runner">
-                    <span>Plymouth Road Runner</span>
+                    <img src="root/images/chiron.png" alt="Bugatti Chiron">
+                    <span>Bugatti Chiron</span>
                 </button>
             </a>
-            <a href="plymouth-gtx.html" class="car-tile">
+            <a href="bugatti-divo.html" class="car-tile">
                 <button>
-                    <img src="root/images/gtx.png" alt="Plymouth GTX">
-                    <span>Plymouth GTX</span>
+                    <img src="root/images/divo.png" alt="Bugatti Divo">
+                    <span>Bugatti Divo</span>
                 </button>
             </a>
-            <a href="plymouth-fury.html" class="car-tile">
+            <a href="bugatti-centodieci.html" class="car-tile">
                 <button>
-                    <img src="root/images/fury.png" alt="Plymouth Fury">
-                    <span>Plymouth Fury</span>
+                    <img src="root/images/centodieci.png" alt="Bugatti Centodieci">
+                    <span>Bugatti Centodieci</span>
                 </button>
             </a>
-            <a href="plymouth-duster.html" class="car-tile">
+            <a href="bugatti-bolide.html" class="car-tile">
                 <button>
-                    <img src="root/images/duster.png" alt="Plymouth Duster">
-                    <span>Plymouth Duster</span>
+                    <img src="root/images/bolide.png" alt="Bugatti Bolide">
+                    <span>Bugatti Bolide</span>
                 </button>
             </a>
-            <a href="plymouth-superbird.html" class="car-tile">
+            <a href="bugatti-veyron.html" class="car-tile">
                 <button>
-                    <img src="root/images/superbird.png" alt="Plymouth Superbird">
-                    <span>Plymouth Superbird</span>
+                    <img src="root/images/veyron.png" alt="Bugatti Veyron">
+                    <span>Bugatti Veyron</span>
                 </button>
             </a>
-            <a href="plymouth-volare.html" class="car-tile">
+            <a href="bugatti-eb110.html" class="car-tile">
                 <button>
-                    <img src="root/images/volare.png" alt="Plymouth Volaré">
-                    <span>Plymouth Volaré</span>
-                </button>
-            </a>
-            <a href="plymouth-prowler.html" class="car-tile">
-                <button>
-                    <img src="root/images/prowler.png" alt="Plymouth Prowler">
-                    <span>Plymouth Prowler</span>
-                </button>
-            </a>
-            <a href="plymouth-satellite.html" class="car-tile">
-                <button>
-                    <img src="root/images/satellite.png" alt="Plymouth Satellite">
-                    <span>Plymouth Satellite</span>
-                </button>
-            </a>
-            <a href="plymouth-belvedere.html" class="car-tile">
-                <button>
-                    <img src="root/images/belvedere.png" alt="Plymouth Belvedere">
-                    <span>Plymouth Belvedere</span>
+                    <img src="root/images/eb110.png" alt="Bugatti EB110">
+                    <span>Bugatti EB110</span>
                 </button>
             </a>
         </div>
