--- a/volkswagen.html
+++ b/volkswagen.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plymouth Cars</title>
+    <title>Volkswagen Cars</title>
     <link rel="stylesheet" href="root/css/styles.css">
     <style>
         body {
@@ -20,17 +20,6 @@
         }
         h1 {
             color: #ffffff;
-        }
-        .notice {
-            color: #ffcc00;
-            background: #333;
-            border-radius: 6px;
-            padding: 1rem;
-            margin: 1.5rem auto 2rem auto;
-            max-width: 600px;
-            text-align: center;
-            font-size: 1.1rem;
-            font-weight: bold;
         }
         #cars {
             display: flex;
@@ -96,73 +85,70 @@
 </head>
 <body>
     <header>
-        <img src="root/images/plymouth-logo.png" alt="Plymouth Logo" style="height:60px; margin-bottom:0.5rem;">
-        <h1>Plymouth Cars</h1>
+        <img src="root/images/volkswagen-logo.png" alt="Volkswagen Logo" style="height:60px; margin-bottom:0.5rem;">
+        <h1>Volkswagen Cars</h1>
     </header>
     <main>
         <a class="back-button" onclick="history.back()">← Back</a>
-        <div class="notice">
-            <strong>Note:</strong> Plymouth is a discontinued brand and no longer manufactures cars. The following are some of its most iconic models.
-        </div>
         <div id="cars">
-            <a href="plymouth-barracuda.html" class="car-tile">
+            <a href="volkswagen-golf.html" class="car-tile">
                 <button>
-                    <img src="root/images/barracuda.png" alt="Plymouth Barracuda">
-                    <span>Plymouth Barracuda</span>
+                    <img src="root/images/golf.png" alt="Volkswagen Golf">
+                    <span>Volkswagen Golf</span>
                 </button>
             </a>
-            <a href="plymouth-road-runner.html" class="car-tile">
+            <a href="volkswagen-passat.html" class="car-tile">
                 <button>
-                    <img src="root/images/road-runner.png" alt="Plymouth Road Runner">
-                    <span>Plymouth Road Runner</span>
+                    <img src="root/images/passat.png" alt="Volkswagen Passat">
+                    <span>Volkswagen Passat</span>
                 </button>
             </a>
-            <a href="plymouth-gtx.html" class="car-tile">
+            <a href="volkswagen-jetta.html" class="car-tile">
                 <button>
-                    <img src="root/images/gtx.png" alt="Plymouth GTX">
-                    <span>Plymouth GTX</span>
+                    <img src="root/images/jetta.png" alt="Volkswagen Jetta">
+                    <span>Volkswagen Jetta</span>
                 </button>
             </a>
-            <a href="plymouth-fury.html" class="car-tile">
+            <a href="volkswagen-tiguan.html" class="car-tile">
                 <button>
-                    <img src="root/images/fury.png" alt="Plymouth Fury">
-                    <span>Plymouth Fury</span>
+                    <img src="root/images/tiguan.png" alt="Volkswagen Tiguan">
+                    <span>Volkswagen Tiguan</span>
                 </button>
             </a>
-            <a href="plymouth-duster.html" class="car-tile">
+            <a href="volkswagen-atlas.html" class="car-tile">
                 <button>
-                    <img src="root/images/duster.png" alt="Plymouth Duster">
-                    <span>Plymouth Duster</span>
+                    <img src="root/images/atlas.png" alt="Volkswagen Atlas">
+                    <span>Volkswagen Atlas</span>
                 </button>
             </a>
-            <a href="plymouth-superbird.html" class="car-tile">
+            <a href="volkswagen-id4.html" class="car-tile">
                 <button>
-                    <img src="root/images/superbird.png" alt="Plymouth Superbird">
-                    <span>Plymouth Superbird</span>
+                    <img src="root/images/id4.png" alt="Volkswagen ID.4">
+                    <span>Volkswagen ID.4</span>
                 </button>
             </a>
-            <a href="plymouth-volare.html" class="car-tile">
+            <a href="volkswagen-beetle.html" class="car-tile">
                 <button>
-                    <img src="root/images/volare.png" alt="Plymouth Volaré">
-                    <span>Plymouth Volaré</span>
+                    <img src="root/images/beetle.png" alt="Volkswagen Beetle">
+                    <span>Volkswagen Beetle</span>
                 </button>
             </a>
-            <a href="plymouth-prowler.html" class="car-tile">
+            <a href="volkswagen-arteon.html" class="car-tile">
                 <button>
-                    <img src="root/images/prowler.png" alt="Plymouth Prowler">
-                    <span>Plymouth Prowler</span>
+                    <img src="root/images/arteon.png" alt="Volkswagen Arteon">
+                    <span>Volkswagen Arteon</span>
                 </button>
             </a>
-            <a href="plymouth-satellite.html" class="car-tile">
+            <a href="volkswagen-taos.html" class="car-tile">
                 <button>
-                    <img src="root/images/satellite.png" alt="Plymouth Satellite">
-                    <span>Plymouth Satellite</span>
+                    <img src="root/images/taos.png" alt="Volkswagen Taos">
+                    <span>Volkswagen Taos</span>
                 </button>
             </a>
-            <a href="plymouth-belvedere.html" class="car-tile">
+            <a href="volkswagen-cc.html" class="car-tile">
                 <button>
-                    <img src="root/images/belvedere.png" alt="Plymouth Belvedere">
-                    <span>Plymouth Belvedere</span>
+                    <img src="root/images/cc.png" alt="Volkswagen CC">
+                    <span>Volkswagen CC</span>
                 </button>
             </a>
         </div>
