--- a/volkswagen.html
+++ b/volkswagen.html
@@ -81,12 +81,22 @@
         .back-button:hover {
             background-color: #0056b3;
         }
+        .brand-link {
+            display: inline-block;
+            margin-top: 0.5rem;
+            color: #007bff;
+            text-decoration: underline;
+            font-size: 1rem;
+        }
     </style>
 </head>
 <body>
     <header>
         <img src="root/images/volkswagen-logo.png" alt="Volkswagen Logo" style="height:60px; margin-bottom:0.5rem;">
         <h1>Volkswagen Cars</h1>
+        <a href="volkswagen.html" class="brand-link">
+            ← Volkswagen Brand Page
+        </a>
     </header>
     <main>
         <a class="back-button" onclick="history.back()">← Back</a>
